changes for update

--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
       let socket = io();
       let el;
 
-      socket.on('time', (timeString) => {
-        el = document.getElementById('server-time');
-        el.innerHTML = 'Server time: ' + timeString;
+      socket.on("time", timeString => {
+        el = document.getElementById("server-time");
+        el.innerHTML = "Updated code Server time: " + timeString;
       });
     </script>
   </head>
